[package]
name = "devrelay"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.7", features = ["openssl"] }
pingora-core = { version = "0.7", features = ["openssl"] }
pingora-proxy = { version = "0.7", features = ["openssl"] }
pingora-load-balancing = { version = "0.7", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
rcgen = "0.13"
rustls-pemfile = "2.1"
async-trait = "0.1"
time = { version = "0.3", features = ["macros"] }
x509-parser = "0.16"
