[package]
name = "devrelay"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "devrelay"
path = "src/main.rs"

[dependencies]
# Proxy
pingora = { version = "0.7", features = ["openssl"] }
pingora-core = { version = "0.7", features = ["openssl"] }
pingora-proxy = { version = "0.7", features = ["openssl"] }
pingora-load-balancing = { version = "0.7", features = ["openssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# TLS / Certs
rcgen = "0.13"
rustls-pemfile = "2.1"
sha2 = "0.10"
time = { version = "0.3", features = ["macros"] }
x509-parser = "0.16"
